--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
-  <title>Redirect</title>
-  <meta name="description" content="Processing request. Please continue." />
+  <title>Continue</title>
+  <meta name="description" content="Your request is ready. Please proceed." />
 
-  <!-- Open Graph — максимально нейтральный -->
-  <meta property="og:title" content="Redirect" />
-  <meta property="og:description" content="Please wait while we redirect you." />
+  <!-- Open Graph – safe for Facebook, WhatsApp, Telegram -->
+  <meta property="og:title" content="Continue" />
+  <meta property="og:description" content="Your session is ready. Click to proceed." />
   <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/5/56/White_blank_square.png" />
-  <meta property="og:url" content="https://your-username.github.io/your-repo/" />
+  <meta property="og:url" content="https://lumo4.github.io/mypage/" />
   <meta property="og:type" content="website" />
 
   <style>
