--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Continue</title>
   <meta name="description" content="Your request is ready. Please proceed." />
 
-  <!-- Open Graph – safe for Facebook, WhatsApp, Telegram -->
+  <!-- Open Graph — безопасно для Facebook -->
   <meta property="og:title" content="Continue" />
   <meta property="og:description" content="Your session is ready. Click to proceed." />
   <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/5/56/White_blank_square.png" />
